--- a/LineByLine.html
+++ b/LineByLine.html
@@ -203,9 +203,9 @@
             <span  id="id_h1" style="font-size:1.2em;">Line By Line</span>
             <br> <span id="id_h11" style="font-size:0.6em;">Antonio Cigna 2023</span>
             <div style="font-size:0.8em;" ><br>
-               <span id="m014" class="msg"><br>per migliorare la comprensione delle lingue straniere</span><br>
+               <span id="m014_1" class="msg"><br>per migliorare la comprensione delle lingue straniere</span><br>
                <br>
-               <span id="m015" class="msg">
+               <span id="m015_1" class="msg">
                by listening to a text <br>read line by line, word by word
                </span>
                <br><br>
@@ -257,9 +257,9 @@
             <span  id="id_h1" style="font-size:1.2em;">Line By Line</span>
             <br> <span id="id_h11" style="font-size:0.6em;">Antonio Cigna 2023</span>
             <div style="font-size:0.8em;" ><br>
-               <span id="m014_1" class="msg"><br>per migliorare la comprensione delle lingue straniere</span><br>
+               <span id="m014_2" class="msg"><br>per migliorare la comprensione delle lingue straniere</span><br>
                <br>
-               <span id="m015_1" class="msg">
+               <span id="m015_2" class="msg">
                by listening to a text <br>read line by line, word by word
                </span>
                <br><br>
@@ -485,7 +485,9 @@
       <script src="./LineByLine_script/lbl_script_9_exec.js"           defer  ></script>    	  
 	  <script>
 			document.getElementById("m014_1").innerHTML = document.getElementById("m014").innerHTML; 
+			document.getElementById("m014_2").innerHTML = document.getElementById("m014").innerHTML; 
 			document.getElementById("m015_1").innerHTML = document.getElementById("m015").innerHTML; 
+			document.getElementById("m015_2").innerHTML = document.getElementById("m015").innerHTML; 
 	  </script>
 	 
 	
