--- a/LineByLine.html
+++ b/LineByLine.html
@@ -488,6 +488,10 @@
 			document.getElementById("m014_2").innerHTML = document.getElementById("m014").innerHTML; 
 			document.getElementById("m015_1").innerHTML = document.getElementById("m015").innerHTML; 
 			document.getElementById("m015_2").innerHTML = document.getElementById("m015").innerHTML; 
+			document.getElementById("inp_txtOrig00").value = ""; // input_prova;
+			var col1="         1         2         3         4         5         6         7         8         9         0"; 
+			var col2="1234567890123456789012345678901234567890123456789012345678901234567890123456789012345678901234567890"; 
+			document.getElementById("inp_txtScale00").value = col1+"\n"+col2; 
 	  </script>
 	 
 	
