--- a/LineByLine.html
+++ b/LineByLine.html
@@ -189,7 +189,7 @@
 			
 			<div id="id_ext_language" style="margin-top:0.5em;"></div>
 			<br><br><br>
-			<div><button id="id1but1" onclick="onclick_tts_langSelected()"><span id="m137">continua</span></button></div>
+			<div><button id="id1but1"  class="button" onclick="onclick_tts_langSelected()"><span id="m137">continua</span></button></div>
 			
 			
          </div>
@@ -239,12 +239,13 @@
 				<br>
 				<div style="width:70%;border:0px solid black;text-align:left;">
 					<div> 
-						<span id=123" class="msg">specifica la lunghezza massima delle righe</span>  
+						<span id="m139" class="msg">specifica la lunghezza massima delle righe</span>  
 						<br>
 						<input id="id_maxLeng" type="number" value="70" max="999" style="width:3em;text-align:right;">
 					</div>
 					<br>
-					<div><button id="id1but1" onclick="onclick_tts_getOrigTxt()">spezza le righe troppo lunghe</button></div>
+					<div><button id="id1but1"  class="button" onclick="onclick_tts_getOrigTxt()">
+					<span id="m140">continua</span></button></div>
 				</div>					
 			</div>				
          </div>	 
