--- a/LineByLine.html
+++ b/LineByLine.html
@@ -245,7 +245,7 @@
 					</div>
 					<br>
 					<div><button id="id1but1"  class="button" onclick="onclick_tts_getOrigTxt()">
-					<span id="m140">continua</span></button></div>
+					<span id="m140" class="msg">continua</span></button></div>
 				</div>					
 			</div>				
          </div>	 
