--- a/LineByLine.html
+++ b/LineByLine.html
@@ -314,8 +314,12 @@
 	  
       <!-- xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx  -->
       <div id="page2" class="onePage1"  style="display:none; border:5px solid blue;">
-         		
+         	
          <div id="id_practice" style="width:100%;height:100%; border:0px solid blue;margin:0;padding:0">
+			<div id="id_h0" style="margin:auto; text-align:center;width:100%;    font-weight:bold;">
+				<span style="font-size:1.2em;">Line By Line</span>
+				<br> <span style="font-size:0.6em;">Antonio Cigna 2023</span>
+			</div>
             <div  style="display:flex;justify-content: center;  width:100%;height:96%;
 				text-align:left;  
 				border:0px solid violet;">
